<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.quiz.QuizFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="0dp">

        <TextView
            android:id="@+id/question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            android:textColor="@color/orange"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/question_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_number"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            android:layout_marginStart="5dp"
            android:textColor="@color/orange"
            android:textSize="18sp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/description_quiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description_quiz"
        android:textColor="@color/blue"
        android:layout_marginTop="10dp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/question_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/test_icon" />

        <TextView
            android:id="@+id/question_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/question_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/blue"
            android:layout_marginLeft="-5dp"
            android:textSize="16sp" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/answer_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="5dp">

        <RadioButton
            android:id="@+id/option_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_a"
            android:textSize="14sp"
            android:textColor="@color/blue"
            android:buttonTint="@color/blue"
            android:layout_marginBottom="-5dp"/>

        <RadioButton
            android:id="@+id/option_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_b"
            android:textSize="14sp"
            android:textColor="@color/blue"
            android:buttonTint="@color/blue"
            android:layout_marginBottom="-5dp"/>

        <RadioButton
            android:id="@+id/option_c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_c"
            android:textSize="14sp"
            android:textColor="@color/blue"
            android:buttonTint="@color/blue"
            android:layout_marginBottom="-5dp"/>

        <RadioButton
            android:id="@+id/option_d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_d"
            android:textSize="14sp"
            android:textColor="@color/blue"
            android:buttonTint="@color/blue"
            android:layout_marginBottom="-5dp"/>

        <RadioButton
            android:id="@+id/option_e"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_e"
            android:textSize="14sp"
            android:textColor="@color/blue"
            android:buttonTint="@color/blue" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:gravity="center">

        <Button
            android:id="@+id/back_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_back_page"
            android:visibility="gone"
            android:backgroundTint="@color/orange"
            android:textColor="@color/white"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/next_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_next_page"
            android:backgroundTint="@color/orange"
            android:textColor="@color/white"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/submit_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_submit"
            android:visibility="gone"
            android:backgroundTint="@color/orange"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>
