<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/txtTimer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/timer"
        android:textSize="18sp"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="16dp"/>

    <EditText
        android:id="@+id/edtOtp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/otp_code"
        android:inputType="number"/>

    <Button
        android:id="@+id/btnVerify"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/verification_btn"
        android:backgroundTint="@color/blue"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"/>
</LinearLayout>
