<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.AuthenticationActivity"
    android:background="@color/blue">

    <ImageView
        android:id="@+id/iv_buddy_kenalan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/buddy_kenalan"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/buddy_kenalan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_auth_title"/>

    <TextView
        android:id="@+id/tv_auth_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auth_title"
        android:textAppearance="@style/TextAppearance.Onboarding.Title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_auth_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auth_desc"
        android:gravity="center"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/TextAppearance.Onboarding.Desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_auth_title"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_masuk_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/have_account"
        android:textColor="@color/pink"
        android:textSize="14sp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/tv_auth_desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_masuk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/orange"
        android:backgroundTint="@color/pink"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:cornerRadius="50dp"
        app:layout_constraintTop_toBottomOf="@id/tv_masuk_desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_daftar_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/make_account"
        android:textColor="@color/pink"
        android:textSize="14sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/btn_masuk"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_daftar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="@color/orange"
        android:backgroundTint="@color/pink"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:cornerRadius="50dp"
        app:layout_constraintTop_toBottomOf="@id/tv_daftar_desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>