<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/greetingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/greeting"
            android:textSize="18sp"
            android:textColor="@color/blue"
            android:paddingBottom="8dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/questionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feeling_ask"
            android:textSize="16sp"
            android:paddingBottom="12dp"
            android:textColor="@color/orange" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingBottom="16dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:id="@+id/happyIcon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/buddy_happy" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/happy"
                    android:textSize="12sp"
                    android:gravity="center"
                    android:textColor="@color/orange"
                    android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginStart="16dp">

                <ImageView
                    android:id="@+id/normalIcon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/buddy_biasa" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/soso"
                    android:textSize="12sp"
                    android:gravity="center"
                    android:textColor="@color/blue"
                    android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginStart="16dp">

                <ImageView
                    android:id="@+id/anxiousIcon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/buddy_gelisah" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/worry"
                    android:textSize="12sp"
                    android:gravity="center"
                    android:textColor="@color/orange"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginStart="16dp">

                <ImageView
                    android:id="@+id/sadIcon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/buddy_sad" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sad"
                    android:textSize="12sp"
                    android:gravity="center"
                    android:textColor="@color/blue"
                    android:textStyle="bold"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/testInstructionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_button_test"
            android:textSize="18sp"
            android:paddingTop="15dp"
            android:paddingBottom="8dp"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textColor="@color/blue"/>

        <Button
            android:id="@+id/testButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_test"
            android:backgroundTint="@color/orange"
            android:textColor="#FFFFFF"
            android:padding="12dp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/historyTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/history"
            android:textSize="16sp"
            android:paddingTop="20dp"
            android:paddingBottom="8dp"
            android:textColor="@color/blue"
            android:textStyle="bold"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/historyRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false" />

        <ProgressBar
            android:id="@+id/pBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"/>

        <ImageView
            android:id="@+id/historyNotFoundImage"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:src="@drawable/history_not_found"
            android:visibility="gone"/>

    </LinearLayout>
</ScrollView>
