<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.quiz.QuizDetailActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_result_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="4dp">

        <ImageButton
            android:id="@+id/btn_back_quiz_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back"
            android:src="@drawable/arrow_back" />

        <TextView
            android:id="@+id/tv_toolbar_title_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result_quiz_title"
            android:layout_marginLeft="25dp"
            android:textColor="@color/blue"
            android:textSize="18sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/result_title_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/result_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold"
                android:textColor="@color/orange"
                android:paddingStart="16dp"/>

            <TextView
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textColor="@color/blue"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:paddingStart="16dp"/>

            <TextView
                android:id="@+id/result_description_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/result_desc"
                android:textColor="@color/blue"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:paddingStart="16dp"/>

            <TextView
                android:id="@+id/message_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/message_result"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:paddingStart="16dp"
                android:textColor="@color/orange"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="24dp">

                <Button
                    android:id="@+id/find_medicine_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/find_medicine_button"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/orange" />

                <Button
                    android:id="@+id/back_button"
                    android:layout_width="115dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/back"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/blue" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/pBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:indeterminate="true"
        android:indeterminateTint="@color/blue" />
</LinearLayout>
