<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:background="@drawable/ad_rounded">

    <ImageView
        android:id="@+id/icon_ad_delete"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/delete_icon_buddy"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <TextView
        android:id="@+id/question_ad_delete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/question_ad_delete"
        android:textSize="16sp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/icon_ad_delete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingTop="8dp"/>

    <TextView
        android:id="@+id/option_yes_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/option_delete_yes"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@android:color/holo_red_light"
        app:layout_constraintTop_toBottomOf="@id/question_ad_delete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingTop="16dp"/>

    <TextView
        android:id="@+id/option_back_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/option_back"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/option_yes_delete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingTop="8dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
